All notable changes to this project will be documented in this file.
The format is based on [Keep a Changelog](http://keepachangelog.com/) 
and this project adheres to [Semantic Versioning](http://semver.org/).
## [0.1.21] April 25 2017
#### Qestion:
	how to deal with different nlines in various processes?
	erase the warning flags?
	PMI error comes from number of arguments!
	-g option ?
	mpirun_rsh problem?
#### changes
	malloc-free in in the loop of raw_dspaces_read
	consumer need to know how many procs in producer
#### issues
	raw dspaces has rpc_connect error:9036590/results/consumer.log
#### trials
	run ds_examples/: works

## [0.1.20] April 24 2017
#### changed
- project moved to comet
- flexpath configured
- in ADIOS removed the -g option, rebuilt
- do I need remove -g option in all libraries?
#### problems
- in comet, dataspaces nokeep has PMI error, 9024518
- in bridges, dspaces only one step, 103192, new: 1032015: move back to
'5bf287a81', try again
#### added
- raw dspaces added


-----------------------------------------------------------------------
moved on comet on April 24
## [0.1.19] 2017 April 24
#### added
	breakdown-timer in consumer side
#### Question
	adios_perform reads, use nonblock instead?


## [0.1.18] 2017 April 21
#### trials
- ADIOS_LOCKMODE_NONE doesn't work for dataspaces
#### to do
- flexpath use lock-non?
	no effect
- use lock-non but increase queue size to 100
---- better writting time, but longer gap between simulation stops and
analysis finishes(90s)
rank 0, t_prepare:0.096157 s, t_cal 74.112131 s,t_buffer = 0.378756, t_write 18.409973 s

## [0.1.17] 2017 April 20
#### Questions
	mpiio-io write when does it return?
		write into buffer then return immediately?
#### 2v1
		mpiio	flexpath	dataspaces	dimes
		41.84	48.276		148.33		
#### fixed
		dataspaces configuration
		DS_LIMIT should be timed with nprocs_producer
#### trying(need to roll back)
	2v2 blocked in second step
	add buffer size and group size back, job pending(1022958)