@@ -2,7 +2,7 @@
     raw dataspacs again
     wait for results
     still err
-9042919
+904032/9042919
     mpiio version
     wait for results
     still err
